--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+ <div>
+    <h3>My First Website</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo deleniti quasi temporibus modi molestias dolore dicta cumque nesciunt blanditiis, velit veritatis eligendi, odio impedit optio! Magni veritatis nemo consequuntur quam.</p>
+ </div>   
 </body>
 </html>
