added the second and third blog

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
  <div>
     <h3>My First Website</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo deleniti quasi temporibus modi molestias dolore dicta cumque nesciunt blanditiis, velit veritatis eligendi, odio impedit optio! Magni veritatis nemo consequuntur quam.</p>
+ </div>
+ <div>
+    <h3>My second blog</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo deleniti quasi temporibus modi molestias dolore dicta cumque nesciunt blanditiis, velit veritatis eligendi, odio impedit optio! Magni veritatis nemo consequuntur quam.</p>
  </div>   
+ <div>
+    <h3>My third blog</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo deleniti quasi temporibus modi molestias dolore dicta cumque nesciunt blanditiis, velit veritatis eligendi, odio impedit optio! Magni veritatis nemo consequuntur quam.</p>
+ </div>      
 </body>
 </html>
