--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
     <h3>My third blog</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo deleniti quasi temporibus modi molestias dolore dicta cumque nesciunt blanditiis, velit veritatis eligendi, odio impedit optio! Magni veritatis nemo consequuntur quam.</p>
  </div>      
+ <div>
+    <h3>How to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful commit message"</li>
+        <li>git push</li>
+    </ul>
+ </div>
 </body>
 </html>
