--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
         <li>git push</li>
     </ul>
  </div>
+ <div>
+    <h3>photo</h3>
+    <img src="pexels-souvenirpixels-414612.jpg" alt="">
+ </div>
 </body>
 </html>
